--- a/src/input.css
+++ b/src/input.css
@@ -16,8 +16,8 @@
 }
 
 .navbar-fixed {
-  @apply fixed z-50 bg-[rgba(255,255,255,0.7)];
-  backdrop-filter: blur(5px);
+  @apply fixed z-50 bg-[rgba(255,255,255,0.3)];
+  backdrop-filter: blur(4px);
   box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -28,9 +28,9 @@
   transform: scale(0.293); /* default scale untuk 300px */
 }
 
-@media (min-width: 768px) { /* md breakpoint */
+@media (min-width: 768px) {
+  /* md breakpoint */
   .responsive-scale {
     transform: scale(0.586); /* 600 / 1024 ≈ 0.586 */
   }
 }
-
